# Autodrive

./: .gitignore  README.md  dakai  guandiao
backend/: .env.example  diagnosis_jobs.py  model_narrative.py  requirements.txt  server.py
docs/: foxglove-mcap-guide.md  github-reproduction-guide.md  nuscenes-data-guide.md  windows-local-ai-demo.md
foxglove-extension/: CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
foxglove-extension/src/: Panel.tsx  index.ts
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
harness/: pyproject.toml
harness/src/autodrive_harness/: __init__.py  catalog.py  causality.py  cli.py  enhancement.py  events.py  fact_bundle.py  features.py  models.py  narrative.py  pipeline.py  report_v2.py  reporting.py  scoring.py  timeline.py  validation.py
harness/tests/: conftest.py  fixture_support.py  generate_golden.py  test_catalog.py  test_causality.py  test_enhancement.py  test_events.py  test_fact_bundle.py  test_features.py  test_models.py  test_narrative.py  test_pipeline.py  test_report_v2.py  test_reporting.py  test_scoring.py  test_ten_scene_golden.py  test_timeline.py  test_validation.py
harness/tests/fixtures/: input-sha256.json
harness/tests/golden/: summary.json
scripts/: build_demo_assets.sh  convert_hf_nuscenes_qa.py  convert_nuscenes.py  convert_nuscenes_rich.py  export_foxglove_mcap.py  export_nuscenes_lidar.py
tests/: test_build_demo_assets_script.py  test_diagnosis_api.py  test_diagnosis_jobs.py  test_export_nuscenes_lidar.py  test_model_smoke.py
(+115 files in other folders)
