[project]
name = "autodrive-diagnosis-harness"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = ["numpy==2.0.2", "pydantic==2.10.4"]

[project.optional-dependencies]
dev = ["pytest==8.3.4"]

[project.scripts]
autodrive-diagnose = "autodrive_harness.cli:main"

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
